# quectel-bg9x-atat

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: driver.rs  lib.rs  time.rs
src/commands/: mod.rs  responses.rs  types.rs  urc.rs
